--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+.auth{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    // background-color: $orange;
+    background-image: url(../img/auth.png);
+    background-size: cover;
+    background-position: center;
+}
+
