--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,5 +16,8 @@
     background-image: url(../img/auth.png);
     background-size: cover;
     background-position: center;
+    input{
+        border: none;
+    }
 }
 
