--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,8 @@
 // Variables
 @import 'variables';
 
+
+@import "~tui-calendar/dist/tui-calendar.css";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 body{
