--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,9 @@
 @import "~tui-calendar/dist/tui-calendar.css";
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+.bg-main{
+    background-color: #E5967D;
+}
 body{
     background-color: aliceblue;
 }
