--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11181,6 +11181,10 @@ h3 {
   background-color: #E5967D;
 }
 
+.bg-body {
+  background-color: aliceblue;
+}
+
 body {
   background-color: aliceblue;
 }
