--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,9 +11,14 @@
 .bg-main{
     background-color: #E5967D;
 }
+.bg-body{
+    
+    background-color: aliceblue;
+}
 body{
     background-color: aliceblue;
 }
+
 main{
     min-height: 60vh;
 }
